refactor: I/O 스레드풀 사용